deployment/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx
  namespace: ingress-nginx
  labels:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
spec:
  type: LoadBalancer
  externalIPs:
    - 192.168.127.20
    - 192.168.127.21
  ports:
#    - name: http
#      port: 80
#      targetPort: 80
#      protocol: TCP
#    - name: https
#      port: 443
#      targetPort: 443
#      protocol: TCP
    - name: data-server-service-udp
      port: 9029
      targetPort: 9029
      protocol: UDP
    - name: device-response-receiver-udp
      port: 9031
      targetPort: 9031
      protocol: UDP
  selector:
#    app: device-response-receiver
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
# не нужен!!!
