deployment/ingress.yml
#    - host: dcs
#      http:
#        paths:
#          - path: /(api/.*)
#            backend:
#              serviceName: dcs-nodes-service
#              servicePort: 18000
#          - path: /(propagate/.*)
#            backend:
#              serviceName: propagate-srv-service
#              servicePort: 9050

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: rewrite
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: dcs
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: dcs-nodes-service
                port:
                  number: 18000
